includes/modules/fly-cart/assets/css/wfc-style.css
/* ... */
.sgsb-widget-shopping-cart-content .sgsb-woocommerce-cart-form .sgsb-fly-cart-table tr.woocommerce-cart-form__cart-item.cart_item {
    margin-top: 10px;
    margin-bottom: 6px;
    padding: 16px;
    display: flex;
    justify-content: space-between;
    border-radius: 10px;
    background: rgb(255, 255, 255);
    align-items: center;
    border: 1px solid rgb(221, 230, 249);
    width: -webkit-fill-available;
    gap: 2% !important;
}

.sgsb-fly-cart-table td {
    border: 0 none;
    padding: 0;
}

.sgsb-fly-cart-table td.product-thumbnail {
    max-width: 34%;
    padding-right: 0;
    line-height: 0;
}

.sgsb-fly-cart-table td.product-name {
    padding-right: 0%;
    display: flex;
    align-items: center;
    background: transparent !important;
    justify-content: space-evenly;
}

.sgsb-fly-cart-table td.product-subtotal {
    width: 20% !important;
    font-size: 18px;
    text-align: right;
    padding-right: 6px;
    font-weight: 600;
    color: rgb(7, 59, 76) !important;
    background: transparent !important;
}

.sgsb-fly-cart-table td.product-subtotal .amount {
    color: rgb(7, 59, 76) !important;
}

.sgsb-fly-cart-table td.product-thumbnail img {
    border-radius: 8px;
    width: 60px;
    height: 60px;
}

.sgsb-fly-cart-table td.product-name .sgsb-product-title {
    font-size: 16px;
    font-weight: bold;
    width: 52%;
    line-height: 1.2;
}

.sgsb-fly-cart-table td.product-name .sgsb-product-title a {
    text-decoration: none;
    padding-bottom: 5px;
    font-weight: 700;
    font-size: 18px;
    margin-top: 10px;
    color: rgb(7, 59, 76);
    display: block;
    line-height: 1;
}

.sgsb-fly-cart-table td.product-name .sgsb-product-title .sgsb-product-category {
    font-size: 12px;
    font-weight: initial;
    line-height: 1.5em;
    padding: 3px 10px;
    border-radius: 10px;
    color: rgb(53, 96, 111);
    display: inline;
    background: rgb(239, 242, 249);
}

.sgsb-fly-cart-table .product-quantity {
    display: flex;
    width: 100px !important;
}

.sgsb-fly-cart-table .product-quantity button {
    width: 36px;
    background: #fff !important;
    height: 36px;
    text-align: center;
    padding: 0px 5px;
}

.sgsb-widget-shopping-cart-content-wrapper .sgsb-widget-shopping-cart-content .sgsb-woocommerce-cart-form .sgsb-fly-cart-table .product-quantity button.sgsb-plus-icon {
    margin-top: 1px;
}

.sgsb-widget-shopping-cart-content-wrapper .sgsb-widget-shopping-cart-content .sgsb-woocommerce-cart-form .sgsb-fly-cart-table .product-quantity button.sgsb-minus-icon,
.sgsb-widget-shopping-cart-content-wrapper .sgsb-widget-shopping-cart-content .sgsb-woocommerce-cart-form .sgsb-fly-cart-table .product-quantity button.sgsb-plus-icon {
    font-size: 30px;
    transition: .33s;
    text-decoration: none;
    border: none;
    display: flex;
    align-items: center;
    justify-content: center;
    color: rgb(7, 59, 76) !important;
}

.sgsb-fly-cart-table .product-quantity button.sgsb-plus-icon:hover,
.sgsb-fly-cart-table .product-quantity button.sgsb-minus-icon:hover {
    border-color: #DB1111;
}

.sgsb-fly-cart-table .product-quantity input {
    background: #fff !important;
    padding: 0;
    height: 40px;
    margin: 0;
    text-align: center;
    border: 0px solid rgb(221, 221, 221);
    outline: 0px;
    font-size: 18px;
    overflow: hidden;
    width: 1.2em;
}

.sgsb-fly-cart-table .product-name .product-quantity .quantity {
    width: 3.5em !important;
    margin: 0;
    position: relative;
    float: none !important;
    overflow: visible !important;
    zoom: 1;
    min-width: 3.5em !important;
    border: none;
}

.sgsb-fly-cart-table .product-quantity .quantity .qty {
    color: #272731 !important;
    background: transparent !important;
    width: inherit !important;
    padding: 0px !important;
    margin: 0px !important;
    box-shadow: none;
    font-weight: 600;
    border: none;
}

.sgsb-fly-cart-table .product-quantity input.minus,
.sgsb-fly-cart-table .product-quantity input.plus {
    display: none;
}

.sgsb-widget-shopping-cart-content-wrapper input[type=number]::-webkit-outer-spin-button,
.sgsb-widget-shopping-cart-content-wrapper input[type=number]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.sgsb-widget-shopping-cart-content-wrapper input[type=number] {
    -moz-appearance: textfield;
    background: transparent !important;
}

.sgsb-fly-cart-table .product-quantity input::-webkit-outer-spin-button,
.sgsb-fly-cart-table .product-quantity input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/** ========================== 
* Coupon Code Starting 
* ========================== **/
.wfc-widget-sidebar .sgsb-cart-collaterals.cart-collaterals .sgsb-coupon {
    width: -webkit-fill-available !important;
    margin: 20px 0px !important;
}

.wfc-widget-sidebar .promocode-form button.sgsb-apply-coupon {
    letter-spacing: 0px !important;
    text-transform: capitalize !important;
}

.wfc-widget-sidebar .promocode-form input.coupon-input-text:focus {
    border-style: none !important;
}

.sgsb-fly-cart-table .coupon input:focus,
.sgsb-fly-cart-table .coupon button:focus,
.sgsb-fly-cart-table .product-quantity input:focus,
.sgsb-fly-cart-table .product-quantity button:focus {
    outline: 0 none;
}

.sgsb-fly-cart-table .coupon {
    display: flex;
    flex-wrap: wrap;
}

.sgsb-fly-cart-table .coupon input,
.sgsb-fly-cart-table .coupon button {
    height: 50px;
    padding: 8px 10px;
    font-size: 16px;
}

.sgsb-fly-cart-table .coupon input {
    border: 1px solid #ccc;
    width: 60%;
    margin: 0;
}

.sgsb-fly-cart-table .coupon button {
    background-color: #28303d;
    color: #ccc;
    width: 40%;
    border: 0 none;
}
/* ... */

